[package]
name = "bomex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["json", "multipart"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "0.15.0"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
serde_json = "1.0.112"
